<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.charl.pizza1.MainActivity"
    android:background="@drawable/pizza">

    <TextView
        android:text="@string/compLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="normal|bold|italic"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:shadowColor="@android:color/holo_green_dark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/sizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/textView2"
        android:textSize="24sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/spinner_size"
        android:entries="@array/size_array"
        android:backgroundTintMode="src_in"
        android:backgroundTint="@android:color/background_light" />

    <CheckBox
        android:text="@string/mush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkMush"
        android:layout_below="@+id/checkPep"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />

    <CheckBox
        android:text="@string/saus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkSaus"
        android:layout_below="@+id/checkMush"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:text="@string/saus"
        android:textColor="@android:color/background_dark" />

    <CheckBox
        android:text="@string/olive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkPep"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp"
        android:id="@+id/checkOlive"
        tools:text="@string/olive"
        android:textColor="@android:color/background_dark" />

    <CheckBox
        android:text="@string/grPep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkGrPep"
        android:layout_below="@+id/checkOlive"
        android:layout_alignLeft="@+id/checkOlive"
        android:layout_alignStart="@+id/checkOlive"
        tools:text="@string/grPep"
        android:textColor="@android:color/background_dark" />

    <CheckBox
        android:text="@string/pep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkPep"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/spinner_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        tools:text="@string/button"
        android:onClick="sendInfo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
